--- a/layouts/partials/body/version-note.html
+++ b/layouts/partials/body/version-note.html
@@ -2,7 +2,7 @@
   {{ $note := "" }} 
   <div class="w-full mt-2 mb-8">
     <div class="flex-grow px-4 py-4 bg-default-soft border-l-4 border-brand">      
-      {{ if not .islatestVersion }}
+      {{ if not .isLatestVersion }}
         {{ $note = printf "This is part of %v `%v` -- *latest release: `%v`*." $.Title .thisVersion .latestVersion }}
       {{ else }}
         {{ $note = printf "This is part of %v `%v` -- *latest release*." $.Title .thisVersion }}
