--- a/layouts/_default/terms.html
+++ b/layouts/_default/terms.html
@@ -18,12 +18,24 @@
           <div class="flex flex-row flex-wrap">
             {{ range $index, $element := .Data.Terms }}
               {{ if $index }}
+                {{/* only show the latest version for versioned sections */}}
+                {{ $count := 0 }}
+                {{ range $s := $element.Pages }}
+                  {{ with $s.Scratch.Get "versioning" }}  
+                    {{ if .isLatestVersion }}
+                      {{ $count = (add $count 1) }}
+                    {{ end }} 
+                  {{ else }} 
+                    {{ $count = (add $count 1) }}
+                  {{ end }} 
+                {{end}} 
+
                 <a href="{{ .Page.RelPermalink }}" class="low-profile-link mr-2 mb-2 flex flex-row items-center rounded bg-default-soft shadow-sm text-sm text-default hover:text-default-dark">
                   <span class="pl-1 pr-1 py-0.5">
                     {{ $element.Page.Title }}
                   </span>
                   <span class="pr-1 pl-1 py-0.5 rounded-r bg-brand text-brand-inverse">
-                    {{ printf "%#v" (len $element) }}
+                    {{ printf "%#v" $count }}
                   </span>
                 </a>
               {{ end }}
