--- a/layouts/_default/taxonomy.html
+++ b/layouts/_default/taxonomy.html
@@ -10,8 +10,10 @@
 
         {{ partial "body/version-note" . }}
 
+        {{ $term :=  .Data.Term }}
+        {{ $taxo :=  .Data.Plural }}
         <header>
-          <h1>{{ .Title }}</h1>
+          <h1>{{ $taxo | singularize | title }}: {{ $term | title }}</h1>
         </header>
 
         <article>
@@ -19,38 +21,84 @@
         </article>
 
         <div>
-          {{ range .Pages.GroupBy "Section" }}
-            {{ $s := $.Site.GetPage "section" .Key }}
-            
-            {{/* only show the latest version for versioned sections */}}
-            {{ $ignorePage := "" }}
-            {{ with $s.Scratch.Get "versioning" }}
-              {{ $ignorePage = (not .isLatestVersion) }}
-            {{end}} 
+          {{ $org := .Page }}
+          {{ with .Site.GetPage "/" }}
 
-            {{ if not $ignorePage}}
-              {{ with $.Site.GetPage "section" .Key }}
-                <h2>{{.Title}}</h2>
-              {{ else }}
-                <h2>{{ .Key | title }}</h2>
-              {{ end }}
-
-              <div class="grid grid-cols-1 xl:grid-cols-2 print:grid-cols-2 gap-4 mb-8 mt-4 lg:mt-12">
-                {{ range .Pages }}
-                  {{ .Render "summary" }}
-                {{ end }}
-              </div>
+            {{ range $p := .Pages }}
+              {{ template "crawl" (dict "p1" $p "org" $org "taxo" $taxo "term" $term ) }}
             {{ end }}
           {{ end }}
         </div>
 
-        {{ partial "footer/page-footer.html" . }}          
-
+        {{ partial "footer/page-footer.html" . }}
       </main>
     </div>
-
     {{ partial "nav/sidebar/main" . }}
-
   </section>
+{{ end }}
 
+
+{{ define "crawl" }}
+  {{ $term :=  .term }}
+  {{ $taxo :=  .taxo }}
+  {{ $section := "" }}
+  {{ $lastSection := .org.Scratch.Get "lastSection" }}
+  {{ $parent := "" }}
+  {{ $lastParent := .org.Scratch.Get "lastParent" }}
+
+  {{ if (in (.p1.Param .taxo) $term) }}
+    {{/* only show the latest version for versioned sections */}}
+    {{ $ignoreSection := "" }}
+    {{ with .p1.Scratch.Get "versioning" }}
+      {{ $ignoreSection = (not .isLatestVersion) }}
+    {{end}}
+
+    {{ if not $ignoreSection }}
+      {{ $versionInfo := dict }}
+      {{ with .p1.Site.GetPage .p1.Section }}
+        {{ $section = .Title }}
+        {{ $versionInfo = .Scratch.Get "versioning" }}
+      {{ end }}
+
+      {{ if ne $section $lastSection }}
+        {{/* start a new section */}}
+        </div>
+        {{ $.org.Scratch.Set "lastSection" $section }}
+
+        {{ if $section}}
+            <h2>{{$section}}</h2>
+            {{ with $versionInfo }}
+              {{ printf "*Only showing results from the latest version (`%v`).*" .latestVersion | markdownify }}
+            {{end}}
+        {{ end }}
+        <div class="grid grid-cols-1 xl:grid-cols-2 print:grid-cols-2 gap-4 mb-8 mt-4 lg:mt-12">
+      {{ end }}
+
+      {{ $parent = .p1.Parent }}
+      {{ if ne $parent $lastParent }}
+        {{/* start a new sub section */}}
+        </div>
+        {{ $.org.Scratch.Set "lastParent" $parent }}
+
+        {{ with $parent }}
+          {{ with .Title }}
+            <h3><a href="{{ $parent.Permalink }}" class="low-profile-link">{{ . }}</a></h3>
+          {{ else }}
+            <h3><a href="{{ $parent.Permalink }}" class="low-profile-link">{{ $parent.RelPermalink | strings.TrimSuffix "/" }}</a></h3>
+          {{ end }}
+        {{ end }}
+        <div class="grid grid-cols-1 xl:grid-cols-2 print:grid-cols-2 gap-4 mb-8 mt-4 lg:mt-12">
+      {{ end }}
+
+      {{ .p1.Render "summary" }}
+
+    {{ end }}
+  {{ end }}
+
+  {{/* recursive processing */}}
+  {{ if .p1.Parent }}
+    {{ range $p := .p1.Pages }}
+      {{ template "crawl" (dict "p1" $p "org" $.org "taxo" $taxo "term" $term ) }}
+    {{ end }}
+  {{ end }}
 {{ end }}
