--- a/layouts/lib/common-data.html
+++ b/layouts/lib/common-data.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
     {{ partial "nav/main" . }}
 
-    <section class="md:ml-80 xl:ml-96 xl:mr-56">    
+    <section class="md:ml-80 xl:ml-96 xl:mr-56">
       <div class="pt-16 md:mx-auto px-4 lg:px-20 xl:px-20 min-h-full prose prose-sm md:prose max-w-none lg:max-w-3xl xl:max-w-4xl print:py-0 print:px-0 print:max-w-none print:prose">
         <main class="min-h-screen">
 
@@ -19,7 +19,7 @@
             </div>
             {{ if .Params.featuredImage }}
               {{ partial "body/featured-image" . }}
-            {{ end }}            
+            {{ end }}
           </header>
 
           <div class="mb-8 flex flex-wrap flex-row items-center">
@@ -28,6 +28,9 @@
           </div>
 
           <article>
+            {{/* markdown content */}}
+            {{ .Content }}
+
             {{/* description (or comment) */}}
             <div>
               {{ partial "lib/description.html" $yamlData }}
@@ -36,7 +39,7 @@
             {{/* changelog */}}
             {{ if not .Params.disable_changelog }}
               {{ with $yamlData.changelog }}
-      
+
                 <section>
                   <h2 id="version-history">Version history</h2>
                   {{ partial "lib/version-history.html" . }}
