--- a/layouts/lib/overview.html
+++ b/layouts/lib/overview.html
@@ -20,9 +20,12 @@
             {{ if .Params.featuredImage }}
               {{ partial "body/featured-image" . }}
             {{ end }}
-          </header>   
+          </header>
 
           <article>
+            {{/* markdown content */}}
+            {{ .Content }}
+
             {{/* description (or comment) */}}
             <div>
               {{ partial "lib/description.html" $yamlData }}
