--- a/layouts/lib/function.html
+++ b/layouts/lib/function.html
@@ -34,7 +34,11 @@
             {{/* markdown content */}}
             {{ .Content }}
 
-            {{/* description (or comment) */}}
+            {{/* description from front matter as lead text */}}
+            {{ with .Params.description }}
+              <p class="lead">{{ . }}</p>
+            {{ end }}
+            {{/* description from yaml */}}
             <div>
               {{ partial "lib/description.html" $yamlData }}
             </div>
