--- a/layouts/shortcodes/note.html
+++ b/layouts/shortcodes/note.html
@@ -62,6 +62,11 @@
     {{ $icon = "minus-circle" }}
     {{ $iconColor = "text-red-600" }}
   {{ end }}
+
+  {{ if eq . "download" }}
+    {{ $title = "Download" }}
+    {{ $icon = "cloud-download" }}
+  {{ end }}
   
   {{ if eq . "dev" }}
     {{ $title = "Development note" }}
