--- a/layouts/partials/nav/sidebar/sidebar.html
+++ b/layouts/partials/nav/sidebar/sidebar.html
@@ -66,9 +66,15 @@
     {{printf `level-%v` $level }}">
       <a href="{{ .p1.Permalink }}" class="w-full py-4 md:py-2 {{ $padding }} break-words">
         {{ $title := .p1.Title }}
+        <span class="mr-2">
+          {{ $title }}
+        </span>
         {{ if .org.Param "debug" }}{{ $title = printf "%v-%v %v" $level $lastLevel $title }}{{end}}
-        <span class="mr-2">{{ $title }}</span>
       </a>
+        
+      {{ with .p1.Params.pinned }}
+        <span class="mr-2">{{ ($.Site.Params.pinIcon | safeHTML) | default "📌" }}</span>
+      {{ end }}
 
       {{if $hasBranchSelector }}
         {{/* label without version number */}}
