--- a/layouts/lib/function.html
+++ b/layouts/lib/function.html
@@ -1,4 +1,5 @@
 {{ define "main" }}
+    {{ partial "page/get-version-info" . }}
     {{ partial "nav/main" . }}
 
     <section class="md:ml-80 xl:ml-96 xl:mr-56">
