--- a/layouts/_default/branch-redirect.html
+++ b/layouts/_default/branch-redirect.html
@@ -1,38 +1,58 @@
-<!DOCTYPE html>
-<html lang="{{ .Site.LanguageCode }}">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Branch redirect</title>
+{{ define "main" }}
+    {{ partial "nav/main" . }}
 
-  {{ with .Site.Param (printf "imported_sections.%s" .Title) }}
+    <section class="md:ml-80 xl:ml-96 xl:mr-56">
+      <div class="pt-16 md:mx-auto px-4 lg:px-20 xl:px-20 min-h-full prose prose-sm md:prose max-w-none lg:max-w-3xl xl:max-w-4xl print:py-0 print:px-0 print:max-w-none print:prose">
+        <main class="min-h-screen">
+
+          <div class="flex justify-between">
+            {{ partial "body/breadcrumb" . }}
+            {{/* {{ partial "body/page-buttons.html" . }} */}}
+          </div>
+
+          <header>
+            <h1>{{ .Title }}</h1>
+            {{ if .Params.featuredImage }}
+              {{ partial "body/featured-image" . }}
+            {{ end }}
+          </header>
+
+          <article>
+            {{ "*This is the redirect page for a versioned section*" | markdownify  }}
+          </article>
+          {{ partial "footer/page-footer.html" . }}
+        </main>
+      </div>
+    </section>
+{{ end }}
+
+{{ define "head" }}
+  {{ with .Page.Scratch.Get "versioning" }}
+    {{/* remove version suffixes (e.g. -dev) */}}
+    {{ $versions := slice }}
+    {{ range .versions }}
+      {{ $versions = $versions | append ( . | replaceRE "-.*" "") }} 
+    {{ end }}
+
     <script>
-      const branchArray = {{ .branches | jsonify | safeJS }}
-// console.log(branch);
-      // branch from query string
+      const branchArray = {{ $versions | jsonify | safeJS }}
+      // branch from query string: <page url>?branch=<branch name>
       const urlParams = new URLSearchParams(window.location.search)
       const urlBranch = urlParams.get('branch')
 
       // get stored branch
-      let branch = (urlBranch === null) ? localStorage.getItem({{ $.Title | urlize }}) : urlBranch
+      let branch = (urlBranch === null) ? sessionStorage.getItem({{ $.Section }}) : urlBranch
 
       // if branch not valid pick latest
       if (!branchArray.includes(branch)) { branch = branchArray[0] }
 
         // save branch to local storage
-        localStorage.setItem({{ $.Title | urlize }}, branch);
+        sessionStorage.setItem({{ $.Section }}, branch);
         
         // update URL for the selected branch
-        window.history.replaceState({}, document.title, "/" + ({{ $.Title | urlize }} + '-' + branch))
+        window.history.replaceState({}, document.title, "/" + ({{ $.Section }} + '-' + branch))
         location.reload()
     </script>
   {{ end }}
-
-</head>
-
-<body>
-
-</body>
-
-</html>
+{{ end }}
