--- a/layouts/partials/lib/description.html
+++ b/layouts/partials/lib/description.html
@@ -1,6 +1,12 @@
-{{/* description */}}
+{{/* description (or comment) */}}
 {{ with .description }}
   <section class="mt-8">
     <span>{{ . | markdownify }}</span>
   </section>
+{{ else }}
+  {{ with .comment}}
+    <section>
+      <span>{{ . }}</span>
+    </section>
+  {{ end }}
 {{ end }}
