--- a/layouts/partials/lib/type/var-table.html
+++ b/layouts/partials/lib/type/var-table.html
@@ -1,7 +1,7 @@
 {{/* render variables as table */}}
 {{ with .var }}
-  <div>
-    <table>
+  <div class="overflow-x-auto md:overflow-x-hidden">
+    <table class="whitespace-nowrap md:whitespace-normal">
       <thead>
         <tr>
           <th scope="col">name</th>
