--- a/layouts/partials/nav/sidebar/branch-selector.html
+++ b/layouts/partials/nav/sidebar/branch-selector.html
@@ -1,11 +1,15 @@
-<label for= "{{ .label }}" class="flex items-center">
-  <select id="{{ .label }}" class="branch-select">
+<label for= "{{ .label }}" class="flex items-center pr-4">
+  {{ $disabled := (le (len .branches) 1) }}
+  <select id="{{ .label }}" class="branch-select" {{ if $disabled }}disabled{{ end }}>
     {{ range $i, $j := .branches }}
-      {{ if eq $i 0 }}
-        <option class="latest-branch" title="latest branch" value="{{ . }}">{{ . }}</option>
-      {{ else }}
-        <option value="{{ . }}">{{ . }}</option>
-      {{end}}
+      <option 
+        value="{{ . | replaceRE "-.*" "" }}"
+        {{ if eq $i 0 }}class="latest-version" title="latest version"{{ end }}
+        {{ if in . "beta" }}class="beta-version" title="beta version"{{ end }}
+        {{ if in . "dev" }}class="dev-version" title="development version"{{ end }}
+        >
+        {{ . }}
+      </option>
     {{end}}
   </select>
 </label>
