--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,4 +1,5 @@
 {{ define "main" }}
+    {{ partial "page/get-version-info" . }}
     {{ partial "nav/main" . }}
 
     <section class="md:ml-80 xl:ml-96 xl:mr-56">
@@ -10,6 +11,8 @@
             {{ partial "body/page-buttons.html" . }}
           </div>
 
+          {{ partial "body/version-note" . }}
+
           <header>
             <h1>{{ .Title }}</h1>
             {{ if .Params.featuredImage }}
@@ -17,7 +20,7 @@
             {{ end }}
           </header>
 
-          <div class="mb-8 flex flex-col items-start sm:flex-row sm:items-center sm:flex-wrap sm:flex-grow">
+          <div class="mb-8 flex flex-wrap flex-row items-center">
             {{ partial "body/infos" . }}
             {{ partial "body/tags" . }}
           </div>
