--- a/layouts/lib/data-type.html
+++ b/layouts/lib/data-type.html
@@ -1,7 +1,8 @@
 {{ define "main" }}
+    {{ partial "page/get-version-info" . }}
     {{ partial "nav/main" . }}
 
-    <section class="md:ml-80 xl:ml-96 xl:mr-56">    
+    <section class="md:ml-80 xl:ml-96 xl:mr-56">
       <div class="pt-16 md:mx-auto px-4 lg:px-20 xl:px-20 min-h-full prose prose-sm md:prose max-w-none lg:max-w-3xl xl:max-w-4xl print:py-0 print:px-0 print:max-w-none print:prose">
         <main class="min-h-screen">
 
@@ -9,6 +10,8 @@
             {{ partial "body/breadcrumb" . }}
             {{ partial "body/page-buttons.html" . }}
           </div>
+
+          {{ partial "body/version-note" . }}
 
           {{/* read the YAML data from the page resources */}}
           {{ $yamlData := partial "lib/get-yaml-data" ( dict "ctx" $ "fileName" "definition" ) }}
@@ -20,15 +23,18 @@
             </div>
             {{ if .Params.featuredImage }}
               {{ partial "body/featured-image" . }}
-            {{ end }}            
+            {{ end }}
           </header>
 
-          <div class="mb-8 flex flex-col items-start sm:flex-row sm:items-center sm:flex-wrap sm:flex-grow">
+          <div class="mb-8 flex flex-wrap flex-row items-center">
             {{ partial "lib/infos" $yamlData }}
             {{ partial "body/tags" . }}
           </div>
 
           <article>
+            {{/* markdown content */}}
+            {{ .Content }}
+
             {{/* description from front matter as lead text */}}
             {{ with .Params.description }}
               <p class="lead">{{ . }}</p>
@@ -41,7 +47,7 @@
             {{/* changelog */}}
             {{ if not .Params.disable_changelog }}
               {{ with $yamlData.changelog }}
-      
+
                 <section>
                   <h2 id="version-history">Version history</h2>
                   {{ partial "lib/version-history.html" . }}
@@ -94,9 +100,6 @@
                 </section>
               {{ end }}
             {{ end }}
-
-            {{/* followed by the markdown content */}}
-            {{ .Content }}
           </article>
           {{ partial "footer/page-footer.html" . }}
         </main>
