--- a/layouts/partials/lib/function/source-code.html
+++ b/layouts/partials/lib/function/source-code.html
@@ -3,11 +3,11 @@
   <div class="">
 
     {{/* Declaration */}}
-    {{ $name := $.ctx.Page.Title }}
+    {{ $name := $.ctx.Page.File.BaseFileName }}
     {{ $description := "" }}
     {{ with .comment }}{{ $description = . }}{{ end }}
-    {{ $code_block := "```iecst\n" }}
-
+    {{ $code_block := "```iecst\n" }}      
+    
     {{/* comment */}}
     {{ with $description }}
       {{ $code_block = printf "%s(*%s*)\n" $code_block . }}
@@ -31,7 +31,7 @@
 
 
     {{/* read the YAML data from the project file */}}
-    {{ $projectData := partial "lib/get-yaml-data" ( dict "ctx" $.ctx.FirstSection "fileName" "definition" ) }}
+    {{ $projectData := partial "lib/get-yaml-data" ( dict "ctx" $.ctx.Parent "fileName" "definition" ) }}
 
     {{ $code_header := partial "lib/code-header.html" (dict "name" $name "project" $projectData "description" $description "latestChangelog" $latestChangelog ) }}
     {{ $code_block = printf "%s%s\n" $code_block $code_header }}
@@ -70,7 +70,7 @@
 
                 {{ with $data.type }}{{$type = printf " : %s" . }}{{end}}
                 {{ with $data.default_value }}{{$default_value = printf " := %v" . }}{{end}}
-                {{ with $data.comment }}{{$comment = printf " (*%s*)" . }}{{end}}
+                {{ with $data.comment }}{{$comment = printf " (*%s*)" (. | replaceRE "\n" " " | strings.TrimRight " ") }}{{end}}
                 {{ $code_block = printf "%s  %s%s%v;%s\n" $code_block $data.name $type $default_value $comment}}
               {{ end }}
               {{/* end of a group */}}
