--- a/layouts/partials/lib/prerequisite-table.html
+++ b/layouts/partials/lib/prerequisite-table.html
@@ -1,6 +1,6 @@
 {{/* prerequisites as list */}}
-<div>
-  <table>
+<div class="overflow-x-auto md:overflow-x-hidden">
+  <table class="whitespace-nowrap md:whitespace-normal">
     <thead>
       <tr>
         <th scope="col" class="w-1/4">prerequisite</th>
