--- a/layouts/partials/summary/classic.html
+++ b/layouts/partials/summary/classic.html
@@ -1,8 +1,8 @@
 <article class="border-2 shadow-xs py-4 px-4 md:px-8">
   <header>
-    <span class="text-2xl text-brand-dark">
-      <a href='{{ .Permalink }}'  class="low-profile-link">{{- with .Params.pinned -}}{{ ($.Site.Params.pinIcon | safeHTML) | default "📌" }}&nbsp;{{- end -}}{{ .Title }}</a>
-    </span>  
+    <span class="text-lg xl:text-2xl text-brand-dark break-words">
+      <a href="{{ .Permalink }}" class="low-profile-link">{{ .Title }}</a>
+    </span>
 
     {{ if eq .Section "news" }}
       <div class="mt-2 flex flex-col items-start sm:flex-row sm:items-center sm:flex-wrap sm:flex-grow">
@@ -18,8 +18,8 @@
         {{ .Params.description }}
       </div>
       <p class="text-sm mt-2 text-brand-dark print:hidden">
-        <a href='{{ .Permalink }}'  class="low-profile-link">{{ printf "Read more >>" | markdownify }}</a>
-      </p>  
+        <a href="{{ .Permalink }}" class="low-profile-link">{{ printf "Read more >>" | markdownify }}</a>
+      </p>
     </div>
   {{ end }}
 
