--- a/layouts/shortcodes/lib-items.html
+++ b/layouts/shortcodes/lib-items.html
@@ -20,14 +20,20 @@
   {{ $kind = $type }}
 {{ end}}
 
+{{ if eq $type "enum" }}
+  {{ $filter = "enum" }}
+  {{ $kind = $type }}
+{{ end}}
+
 {{ $pages := slice }}
 {{ if $tag }}
   {{/* all pages of the specified tag */}}
-  {{ $pages = (index .Page.Site.Taxonomies.tags $tag).Pages }}
+  {{ $pages = where (index .Page.Site.Taxonomies.tags $tag).Pages "Section" $.Page.Section }}
 {{ else }}
   {{/* all pages of with a `lib` layout */}}
   {{ $pages = where .Page.FirstSection.RegularPagesRecursive "Layout" "data-type" }}
   {{ $pages = append $pages (where .Page.FirstSection.RegularPagesRecursive "Layout" "function") }}
+  {{ $pages = append $pages (where .Page.FirstSection.RegularPagesRecursive "Layout" "enum") }}
 {{ end }}
 
 
@@ -44,7 +50,7 @@
       {{ range $items }}
         {{ $item := partial "lib/lib-item-summary" ( dict "ctx" . ) }}
         {{ if eq $item.kind $type }}
-          {{ $table = printf "%s | %s | *%s* |\n" $table $item.markdownLink $item.comment }}
+          {{ $table = printf "%s | %s | %v |\n" $table $item.markdownLink (.Params.description | replaceRE "\n" " ") }}
           {{ $itemsFound = true }}
         {{ end }}
       {{ end }}
@@ -59,7 +65,14 @@
     {{ range where . "Layout" "data-type" }}
       {{ $itemsFound = true }}
       {{ $item := partial "lib/lib-item-summary" ( dict "ctx" . ) }}
-      {{ $table = printf "%s| %s | %s | *%s* |\n" $table $item.kind $item.markdownLink $item.comment }}
+      {{ $table = printf "%s| %s | %s | %v |\n" $table $item.kind $item.markdownLink (.Params.description | replaceRE "\n" " ") }}
+    {{ end }}
+
+    {{/* enums */}}
+    {{ range where . "Layout" "enum" }}
+      {{ $itemsFound = true }}
+      {{ $item := partial "lib/lib-item-summary" ( dict "ctx" . ) }}
+      {{ $table = printf "%s| %s | %s | %v |\n" $table $item.kind $item.markdownLink (.Params.description | replaceRE "\n" " ") }}
     {{ end }}
 
     {{/* function blocks */}}
@@ -67,7 +80,7 @@
       {{ $item := partial "lib/lib-item-summary" ( dict "ctx" . ) }}
       {{ if eq $item.kind "function block" }}
         {{ $itemsFound = true }}
-        {{ $table = printf "%s| %s | %s | *%s* |\n" $table $item.kind $item.markdownLink $item.comment }}
+        {{ $table = printf "%s| %s | %s | %v |\n" $table $item.kind $item.markdownLink (.Params.description | replaceRE "\n" " ") }}
       {{ end }}
     {{ end }}
 
@@ -76,7 +89,7 @@
       {{ $item := partial "lib/lib-item-summary" ( dict "ctx" . ) }}
       {{ if eq $item.kind "function" }}
         {{ $itemsFound = true }}
-        {{ $table = printf "%s| %s | %s | *%s* |\n" $table $item.kind $item.markdownLink $item.comment }}
+        {{ $table = printf "%s| %s | %s | %v |\n" $table $item.kind $item.markdownLink (.Params.description | replaceRE "\n" " ") }}
       {{ end }}
     {{ end }}
   {{ end }}
@@ -85,4 +98,3 @@
     {{ $table | markdownify}}
   {{ end }}
 {{ end }}
-
